--- a/preamble.tex
+++ b/preamble.tex
@@ -18,6 +18,7 @@
 \usepackage{caption,subcaption}
 \captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
 \renewcommand\thesubfigure{(\sc \alph{subfigure})}
+\usepackage{siunitx}
 \usepackage[
 ruled,
 %linesnumbered,
